# algonauts2025

./: .gitignore  .gitmodules  .pre-commit-config.yaml  01_feature_extraction.py  LICENSE  README.md  Schaefer_1000Parcel_7Networks_order_Vis1_Aud2_Lan3.csv  abl_notxt.py  algo_mihir_replication.py  algonauts_2025_challenge_model_training_cindyhfls.ipynb  algonauts_README.md  algonauts_feature_extraction.py  av_gated_txt.py  cls_multisub.py  cosmos_fmri.ipynb  data_alignment.ipynb  data_multisub.py  dataloading_profiler.py  diff_dataload.ipynb  diff_dataload.py  download_algonautsDS.sh  ensemble_predictions.py  ext_trainMMD.py  extract_text_features.py  extract_video_features_timm.py  feature_ext.ipynb  feature_ext.py  feature_ext_requirements.txt  feature_extraction.ipynb  feature_extraction_utils.py  fmri_quant.ipynb  fmri_vae.py  fmri_vqdim128.ipynb  fmri_vqdim_quant.ipynb  generate_best_accuracy_report_across_submissions.py  generate_configs.py  model.py  multi_sub.py  multi_withAE.py  multimodal_MLP.ipynb  (+25 more)
av_model/: algo_mihir_replication.py  algo_multisub.py  av_gated_txt.py  multi_ft.py
config/: default_cross_encoding.yaml  default_feature_encoding.yaml  default_internvl3_features.yaml  default_llama_features.yaml  default_qwen_features.yaml  default_submission.yaml  default_text_features.yaml  default_video_features_timm.yaml  default_vjepa2_features.yaml  default_whisper_features.yaml
cross_encoding/: cross_encoding.ipynb  cross_encoding_v1.ipynb
deprecated_models/: contrastive_arch.py  multisubject_AE.py  omni_train.py
feature_encoding/: feature_encoding.ipynb
feature_extraction/: internvl3_video_features.py  llama_text_features.py  qwen_video_audio_features.py  vjepa2_video_features.py  (+1 more)
(+35 files in other folders)
